deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job4j-devops
  labels:
    app: calculator
spec:
  replicas: 3
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
    spec:
      containers:
        - name: calculator
          image: arhanos/job4j_devops:v.1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
