ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 192.168.49.2
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calculator-service
                port:
                  number: 8080
